assets/styles.css
* {
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}

html {
	margin: 0;
	padding: 0;
	height: 100%;
}

body {
	position: relative;
	font-size: 14px;
	line-height: 20px;
	font-weight: normal;
	font-style: normal;
	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
		Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
		"Segoe UI Symbol";
	-webkit-font-smoothing: antialiased;
	-webkit-text-size-adjust: 100%;
	min-height: 100vh;
	max-width: 540px;
	margin: 0px auto;
	padding: 40px 0 100px;
}

@media (min-width: 992px) {
	body {
		padding: 35px 50px;
	}
}

h1,
h2,
h3,
h4,
h5,
h6 {
	margin-bottom: 1rem;
	line-height: 1.25;
	color: #313131;
}

h1 {
	font-size: 2rem;
}

h2 {
	margin-top: 2rem;
	font-size: 1.5rem;
}

h3 {
	margin-top: 1.5rem;
	font-size: 1.25rem;
}

h4,
h5,
h6 {
	margin-top: 1.1rem;
	font-size: 1.1rem;
}

img {
	max-width: 100%;
}

a {
	color: inherit;
	text-decoration: none;
	border-bottom: 1px solid #555;
}

a.image {
	display: block;
	text-align: center;
	border: 0;
	border-radius: 5px;
	margin: 30px 0;
}

mark {
	background: #fffc76;
	padding: 0 5px;
}

blockquote {
	border-left: 5px solid #ccc;
	margin: 40px 0;
	padding: 5px 30px;
	background: #eee;
}

.logo {
	position: relative;
	margin: 0 auto 48px;
	text-align: center;
}

.logo a {
	height: 100px;
	width: 100px;
	font-size: 1.5em;
	border-radius: 100%;
	display: inline-block;
	text-align: center;
	line-height: 100px;
	box-sizing: border-box;
	transition: transform 0.2s ease;
}

.logo a:hover {
	transform: translateY(-6%);
}

.logo a .logo-avatar {
	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15);
	-webkit-border-radius: 50%;
	-moz-border-radius: 50%;
	border-radius: 50%;
	height: 100%;
	width: 100%;
	object-fit: cover;
}

@media (max-width: 480px) {
	.logo a:hover + .logo-prompt,
	.logo a:focus + .logo-prompt {
		display: none !important;
	}
}

iframe {
	margin: 45px 0 !important;
}

ul,
ol {
	margin-top: 10px;
	padding-left: 20px;
}

ul li,
ol li {
	word-wrap: break-word;
	margin-bottom: 16px;
}

ul img,
ol img {
	margin: 40px 0;
	border-radius: 5px;
}

sup {
	vertical-align: top;
	position: relative;
	top: -0.5em;
	margin-left: 1px;
}

time {
	color: #555;
}

code,
pre,
.code,
.footnotes {
	font-family: Consolas, monaco, monospace;
}

code {
	color: #f14e32;
	background: #eee;
	padding: 2px 6px;
	font-size: 13px;
}

pre {
	display: block;
	margin-top: 0;
	margin-bottom: 1rem;
	font-size: 0.8rem;
	line-height: 1.4;
	white-space: pre;
	overflow-x: auto;
	background-color: #f9f9f9;
	border: 1px solid #ddd;
	padding: 1rem;
}

pre code {
	font-size: 100%;
	color: inherit;
	background-color: transparent;
	padding: 0;
}

table {
	width: 100%;
	table-layout: fixed;
	margin: 45px 0;
}

table thead {
	background: #f2f2f2;
}

table th {
	text-align: left;
	padding: 8px 10px;
	border-bottom: 15px solid #fff;
}

table td {
	padding: 4px 0;
}

iframe {
	width: 100%;
}

article {
	max-width: 100%;
	margin: 0 auto;
}

article h1.title {
	line-height: 1.4em;
	text-align: center;
	font-size: 1.4em;
}

article .divider {
	background: #ddd;
	background: -webkit-gradient(
		linear,
		left top,
		right top,
		from(rgba(255, 255, 255, 0)),
		color-stop(#ccc),
		to(rgba(255, 255, 255, 0))
	);
	background: -webkit-linear-gradient(
		left,
		rgba(255, 255, 255, 0),
		#ccc,
		rgba(255, 255, 255, 0)
	);
	background: linear-gradient(
		to right,
		rgba(255, 255, 255, 0),
		#ccc,
		rgba(255, 255, 255, 0)
	);
	height: 1px;
	margin: 2em 0;
}

article .center {
	text-align: center;
	margin: 0 auto;
}

article hr {
	border: 0;
	border-bottom: 1px solid #000;
	margin: 30px 0;
}

article p {
	font-size: 15px;
	line-height: 1.9em;
	word-wrap: break-word;
}

article .footnote {
	border: 0;
	background-color: #0087be;
	color: #fff;
	padding-left: 2px;
	padding-right: 2px;
}

article .footnotes {
	margin: 50px auto;
	display: block;
	font-size: 0.8em;
	color: #666;
}

article .footnotes p {
	line-height: 1rem;
	font-weight: normal;
}

article .footnotes ol {
	margin: 0;
	padding-left: 15px;
}

article .footnotes ol li {
	font-weight: bold;
}

article .footnotes .reversefootnote {
	border: 0;
	color: #0087be;
}

article a:hover {
	color: #369;
	border-color: #369;
}

.back {
	text-align: center;
}

.back a {
	text-decoration: none;
	margin: 40px auto 0;
	display: inline-block;
	padding: 10px;
	border: 0;
}

.back a:before {
	content: "<<";
	margin-right: 5px;
	color: #000;
}

.block {
	display: block;
}

.page-navigation,
.footer {
	text-align: center;
	max-width: 100%;
	width: 100%;
	margin: 0 auto;
	font-size: 0.8rem;
}

.footer {
	position: absolute;
	bottom: 20px;
	left: 0;
	overflow-x: hidden;
}

.page-navigation {
	margin: 50px auto 0 auto;
}

.page-navigation a {
	display: inline-block;
	text-decoration: none;
	border-bottom: none;
}

.page-navigation span {
	display: inline-block;
}

.footer {
	margin-top: 50px;
	color: #777;
}

.footer a {
	border: none;
	font-weight: bold;
}

section {
	max-width: 500px;
	margin: 0 auto 50px auto;
}

section ul {
	list-style: none;
	margin: 0;
	padding: 0;
}

section ul li {
	margin: 25px 0;
}

section ul li .title {
	max-width: 100%;
	word-wrap: normal !important;
}

section ul li a {
	text-decoration: none;
	border: 0;
	color: #000;
	box-sizing: border-box;
}

section ul li .post-date {
	float: right;
	margin: 0 0 0 20px;
	font-size: 0.6rem;
}

time {
	font-size: 0.8rem;
	text-transform: uppercase;
}

section ul li span {
	display: inline-block;
	color: #757575;
	letter-spacing: 1px;
	text-transform: uppercase;
}

@media (min-width: 992px) {
	section ul li a {
		border-bottom: 1px solid transparent;
	}

	section ul li a:hover {
		border-color: #000;
	}
}

